@@ -94,6 +94,12 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
 }
 check.dependsOn integration
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 jacocoTestReport {
     executionData(test)
     reports {
@@ -190,7 +196,9 @@ repositories {
 
 
 dependencies {
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-batch', version: '2.4.2')
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-batch', version: '2.4.2') {
+        exclude group: 'org.glassfish', module: 'jakarta.el'
+    }
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot)
     compile(group: 'org.springframework', name: 'spring-beans', version: '5.3.7')
     compile(group: 'org.springframework', name: 'spring-context', version: '5.3.7')
@@ -200,7 +208,7 @@ dependencies {
 
     implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.4.6'
     implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.6'
-    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.6'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.1'
     implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.4.6'
 
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
@@ -208,6 +216,7 @@ dependencies {
     compile(group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0') {
         exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
         exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
+        exclude group: 'org.glassfish', module: 'jakarta.el'
     }
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'uk.gov.hmcts.reform:idam-client:v1.5.4'
@@ -252,6 +261,7 @@ dependencies {
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: versions.rest_assured
     testCompile group: 'io.github.openfeign', name: 'feign-jackson', version: versions.feign_jackson
     testCompile('com.opentable.components:otj-pg-embedded:0.13.3')
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
